# serializer version: 1
# name: test_entity_and_device_data[network_payload0][number.internet_1_failover_priority-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.internet_1_failover_priority',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Failover priority',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Failover priority',
    'platform': 'unifi',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wan_failover_priority',
    'unique_id': 'wan_failover_priority-600c0f0000000000000000a1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[network_payload0][number.internet_1_failover_priority-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Internet 1 Failover priority',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.internet_1_failover_priority',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entity_and_device_data[network_payload0][number.internet_1_load_balance_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 99,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.internet_1_load_balance_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Load balance weight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load balance weight',
    'platform': 'unifi',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wan_load_balance_weight',
    'unique_id': 'wan_load_balance_weight-600c0f0000000000000000a1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[network_payload0][number.internet_1_load_balance_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Internet 1 Load balance weight',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 99,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.internet_1_load_balance_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
